--- a/vaja1.2/LostAndFoundApi/.env
+++ b/vaja1.2/LostAndFoundApi/.env
@@ -1,2 +1,3 @@
 PORT=3001
-MONGO_URI=mongodb+srv://stefansrnjakov:tranbolina11@cluster0.px7evg2.mongodb.net/DSMJ
+MONGO_URI=mongodb+srv://lost-and-found:lostAndFound@cluster0.px7evg2.mongodb.net/DSMJ
+JWT_SECRET=secret
