--- a/vaja1.2/LostAndFoundApi/.env
+++ b/vaja1.2/LostAndFoundApi/.env
@@ -1,3 +1,3 @@
 PORT=3001
-MONGO_URI=mongodb+srv://lost-and-found:lostAndFound@cluster0.px7evg2.mongodb.net/DSMJ
+MONGO_URI=mongodb+srv://lost-and-found:lostAndFound@cluster0.px7evg2.mongodb.net/LostAndFound
 JWT_SECRET=secret
