--- a/vaja1.2/LostAndFoundClient2/requirements.txt
+++ b/vaja1.2/LostAndFoundClient2/requirements.txt
@@ -1,22 +1,22 @@
-title = "Lost and Found"
-description = "An application to track lost and found items."
-host = "http://localhost:3001"
-port = "3001"
+title = "Found Items Tracker"
+description = "A platform for reporting and managing found items."
+host = "http://localhost:3002"
+port = "3002"
 
 theme {
-    mode = light
-    primary-color = "#1976D2"
-    secondary-color = "#FF9800"
-    primary-btn-color = "#0D47A1"
-    secondary-btn-color = "#FFC107"
-    warning-btn-color = "#F44336"
+    mode = dark
+    primary-color = "#4CAF50"
+    secondary-color = "#FFC107"
+    primary-btn-color = "#388E3C"
+    secondary-btn-color = "#FF9800"
+    warning-btn-color = "#FF5722"
     error-btn-color = "#D32F2F"
 }
 
 layout {
     showMenu = true
     showHeader = true
-    showFooter = false
+    showFooter = true
 }
 
 api {
@@ -36,89 +36,62 @@ api {
     }
 }
 
+
 pages {
     Home {
         url = "/"
-        title = "Welcome to the Lost and Found Platform"
+        title = "Welcome to the Found Items Tracker"
         content = """
-            # Welcome to Lost and Found!
+            # Found Items Tracker
 
-            Our platform helps people report and find lost items across various locations. Whether you've lost something precious or found an item and want to return it to its rightful owner, this platform makes it simple and secure to track and manage lost and found items.
+            This platform assists individuals in reporting and claiming found items, ensuring that misplaced possessions can be returned to their rightful owners.
 
-            ## Features:
-            * Report lost or found items easily.
-            * Browse lists of reported lost and found items.
-            * Connect with others to return found items to their owners.
+            ## Key Features:
+            * Report found items quickly and easily.
+            * Browse reported found items by category and location.
+            * Connect with individuals looking for their lost items.
 
-            ### How to Get Started:
-            1. Publish a lost item or report a found item.
-            2. Browse lost or found items.
-            3. Manage your profile and keep track of your reports.
+            ### Get Started:
+            1. Report a found item.
+            2. Browse items that have been reported as lost.
+            3. Contact item owners directly to return items.
         """
         quickLinks {
-            view = grid
+            view = list
             links {
-                ReportLostItem {
-                    link = "/report-lost"
-                    text = "Publish lost item"
-                }
                 ReportFoundItem {
                     link = "/report-found"
-                    text = "You found something, report here"
+                    text = "Report a Found Item"
                 }
-                ListLostItem {
+                ViewLostItems {
                     link = "/lost-items"
-                    text = "Check if someone published the item you found"
-                }
-                ListFoundItem {
-                    link = "/found-items"
-                    text = "Check if someone reported your lost item"
+                    text = "View Reported Lost Items"
                 }
             }
         }
     }
-    LostItems {
-        header = "Here for Lost Items"
-        url = "/lost-items"
-        description = "
-           Browse through items that have been reported as lost. Use the filters to narrow down the list by location or category, and find what you're looking for more efficiently.
-        "
-        data = "lostItems"
-        view = list
-    }
     FoundItems {
-        header = "Here for Found Items"
         url = "/found-items"
-        data = "lostItems"
-        view = grid
-    }
-    ReportLost {
-        url = "/report-lost"
-        post = "reportLost"
+        view = table
     }
     ReportFound {
-        url = "/report-found"
-        post = "reportFound"
+        data = "reportFound"
+        view = table
     }
     About {
         url = "/about"
-        title = "About the Lost and Found Application"
+        title = "About Found Items Tracker"
         content = """
             # About Us
 
-            The Lost and Found application was created to help people recover lost items or return found items with ease. We aim to provide a **simple**, **user-friendly** platform to post details of lost or found objects, categorize them, and keep track of the search and recovery process.
+            The Found Items Tracker was created to facilitate the process of reporting and reclaiming lost belongings. Our aim is to provide a seamless and user-friendly experience for individuals looking to return lost items or report what they have found.
 
-            ## Why Use This App?
-            * Convenient way to report lost or found items.
-            * Easy to browse through categorized lost/found items.
-            * Secure platform to ensure privacy and protection of personal information.
+            ## Why Choose Us?
+            * Quick and straightforward reporting process.
+            * Categorized listings for easy browsing.
+            * Secure and user-friendly interface.
 
-            ## How It Works:
-            1. **Report Items:** Lost an item or found something? Post the details in just a few steps.
-            2. **Browse Listings:** Browse through a categorized list of lost and found items to find a match.
-            3. **Connect with Owners:** Once you find a match, contact the item owner to return the item.
-
-            Join us in making the world a better place, where lost things can find their way back home!
+            Join our community in helping lost items find their way home!
         """
     }
 }
@@ -128,17 +101,17 @@ components {
         error {
             show-header = true
             close-icon = true
-            close-button-side = right
+            close-button-side = left
         }
         confirmation {
             show-header = true
-            close-icon = true
+            close-icon = false
         }
         alert {
             show-header = true
             close-icon = true
-            close-button-side = right
-            duration = "5000"
+            close-button-side = left
+            duration = "3000"
         }
     }
     modals { 
@@ -149,23 +122,20 @@ components {
         }
     }
     menu {
-        show-logo = true
+        showLogo = false
         type = sidebar
     }
     footer {
-        background-color = "#f5f5f5"
-        height = "100px"
+        background-color = #e0e0e0
+        height = 80px
         content = """
-            # Footer Content
-
-            * Contact Us: [info@lostandfound.com](mailto:info@lostandfound.com)
-            * About Us
+            * Get in touch: [contact@founditemstracker.com](mailto:contact@founditemstracker.com)
+            * Terms of Use
             * Privacy Policy
-            * Terms of Service
 
             Follow us on social media:
-            * Twitter: [@LostAndFoundApp](link:"https://twitter.com/LostAndFoundApp")
-            * Facebook: [Lost and Found Platform](link: "https://twitter.com/LostAndFoundApp")
+            * Instagram: [@FoundItemsTracker](link:https://instagram.com/FoundItemsTracker)
+            * LinkedIn: [Found Items Tracker](link:https://linkedin.com/company/found-item-tracke)
         """
     }
 }
