--- a/vaja1.2/LostAndFoundClient3/requirements.txt
+++ b/vaja1.2/LostAndFoundClient3/requirements.txt
@@ -1,22 +1,22 @@
-title = "Lost and Found"
-description = "An application to track lost and found items."
-host = "http://localhost:3001"
-port = "3001"
+title = "Lost and Found Community"
+description = "A collaborative platform for lost and found items."
+host = "http://localhost:3003"
+port = "3003"
 
 theme {
     mode = light
-    primary-color = "#1976D2"
-    secondary-color = "#FF9800"
-    primary-btn-color = "#0D47A1"
-    secondary-btn-color = "#FFC107"
-    warning-btn-color = "#F44336"
-    error-btn-color = "#D32F2F"
+    primary-color = "#722F37"
+    secondary-color = "#FF5722"
+    primary-btn-color = "#722F37"
+    secondary-btn-color = "#FF9800"
+    warning-btn-color = "#FFC107"
+    error-btn-color = "#F44336"
 }
 
 layout {
     showMenu = true
     showHeader = true
-    showFooter = false
+    showFooter = true
 }
 
 api {
@@ -36,89 +36,65 @@ api {
     }
 }
 
+
 pages {
     Home {
         url = "/"
-        title = "Welcome to the Lost and Found Platform"
+        title = "Join the Lost and Found Community"
         content = """
-            # Welcome to Lost and Found!
+            # Lost and Found Community
 
-            Our platform helps people report and find lost items across various locations. Whether you've lost something precious or found an item and want to return it to its rightful owner, this platform makes it simple and secure to track and manage lost and found items.
+            Welcome to the Lost and Found Community! Our platform encourages collaboration in reporting and finding lost items. Together, we can help those in need of assistance.
 
-            ## Features:
-            * Report lost or found items easily.
-            * Browse lists of reported lost and found items.
-            * Connect with others to return found items to their owners.
+            ## Community Features:
+            * Share and report lost items with a caring community.
+            * Easily find reported lost items by browsing categories.
+            * Connect with fellow community members to return items.
 
-            ### How to Get Started:
-            1. Publish a lost item or report a found item.
-            2. Browse lost or found items.
-            3. Manage your profile and keep track of your reports.
+            ### Steps to Participate:
+            1. Report a lost item.
+            2. Browse community listings.
+            3. Connect with others to facilitate item returns.
         """
         quickLinks {
-            view = grid
+            view = "grid"
             links {
                 ReportLostItem {
                     link = "/report-lost"
-                    text = "Publish lost item"
-                }
-                ReportFoundItem {
-                    link = "/report-found"
-                    text = "You found something, report here"
+                    text = "Report Your Lost Item"
                 }
                 ListLostItem {
                     link = "/lost-items"
-                    text = "Check if someone published the item you found"
+                    text = "Browse Community Reports"
                 }
-                ListFoundItem {
-                    link = "/found-items"
-                    text = "Check if someone reported your lost item"
+                UserProfile {
+                    link = "/profile"
+                    text = "Manage Your Account"
                 }
             }
         }
     }
     LostItems {
-        header = "Here for Lost Items"
-        url = "/lost-items"
-        description = "
-           Browse through items that have been reported as lost. Use the filters to narrow down the list by location or category, and find what you're looking for more efficiently.
-        "
-        data = "lostItems"
-        view = list
-    }
-    FoundItems {
-        header = "Here for Found Items"
-        url = "/found-items"
-        data = "lostItems"
+        url = "/lost-reports"
         view = grid
     }
     ReportLost {
         url = "/report-lost"
-        post = "reportLost"
-    }
-    ReportFound {
-        url = "/report-found"
-        post = "reportFound"
     }
     About {
         url = "/about"
-        title = "About the Lost and Found Application"
+        title = "About the Lost and Found Community"
         content = """
             # About Us
 
-            The Lost and Found application was created to help people recover lost items or return found items with ease. We aim to provide a **simple**, **user-friendly** platform to post details of lost or found objects, categorize them, and keep track of the search and recovery process.
+            The Lost and Found Community is dedicated to assisting individuals in locating lost belongings. By fostering a collaborative environment, we make it easy for users to report and search for items, ensuring that no one has to navigate the process alone.
 
-            ## Why Use This App?
-            * Convenient way to report lost or found items.
-            * Easy to browse through categorized lost/found items.
-            * Secure platform to ensure privacy and protection of personal information.
+            ## Our Goals:
+            * Create a safe and supportive environment for item recovery.
+            * Facilitate communication between users to return items.
+            * Build a community of caring individuals.
 
-            ## How It Works:
-            1. **Report Items:** Lost an item or found something? Post the details in just a few steps.
-            2. **Browse Listings:** Browse through a categorized list of lost and found items to find a match.
-            3. **Connect with Owners:** Once you find a match, contact the item owner to return the item.
-
-            Join us in making the world a better place, where lost things can find their way back home!
+            Let's work together to reunite lost items with their owners!
         """
     }
 }
@@ -138,7 +114,7 @@ components {
             show-header = true
             close-icon = true
             close-button-side = right
-            duration = "5000"
+            duration = "4000"
         }
     }
     modals { 
@@ -149,23 +125,22 @@ components {
         }
     }
     menu {
-        show-logo = true
-        type = sidebar
+        showLogo = true
+        type = topbar
     }
     footer {
-        background-color = "#f5f5f5"
-        height = "100px"
+        background-color = "f5f5f5"
+        height = "120px"
         content = """
-            # Footer Content
+            # Community Footer
 
-            * Contact Us: [info@lostandfound.com](mailto:info@lostandfound.com)
-            * About Us
+            * Contact: [support@lostandfoundcommunity.com](mailto:support@lostandfoundcommunity.com)
+            * Community Guidelines
             * Privacy Policy
-            * Terms of Service
 
-            Follow us on social media:
-            * Twitter: [@LostAndFoundApp](link:"https://twitter.com/LostAndFoundApp")
-            * Facebook: [Lost and Found Platform](link: "https://twitter.com/LostAndFoundApp")
+            Connect with us:
+            * Twitter: [@LostAndFoundComm](link:https://twitter.com/LostAndFoundComm)
+            * LinkedIn: [Lost and Found Community](link:https://linkedin.com/company/lost-and-found-community)
         """
     }
 }
